tests/cases/errors/missing_then.b
REM Test: IF without THEN (should fail)
IF x% > 5 PRINT "missing then"
